# sentinel

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
api/: track.ts
apps/web/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: config.ts  index.css  main.tsx  vite-env.d.ts
apps/web/src/components/: ActivityPanel.tsx  AlertRegistryPanel.tsx  ErrorBanner.tsx  ErrorBoundary.tsx  FeedbackButton.tsx  GuardianPanel.tsx  Onboarding.tsx  PositionPanel.tsx  RiskMonitorPanel.tsx  TestTransaction.tsx  TxProgress.tsx  WalletBalance.tsx  WalletButton.tsx  ui.test.tsx
apps/web/src/lib/: analytics.ts  transactions.ts
apps/web/src/pages/: DashboardPage.tsx
apps/web/src/wallet/: WalletProvider.tsx  kit.ts
contracts/: Cargo.toml  README.md  deployments.json
contracts/alert_registry/: Cargo.toml
contracts/alert_registry/src/: lib.rs
contracts/guardian/: Cargo.toml
contracts/guardian/src/: lib.rs
contracts/risk_monitor/: Cargo.toml
contracts/risk_monitor/src/: lib.rs
