[workspace]
resolver = "2"
members = ["alert_registry", "risk_monitor", "guardian"]

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false

[workspace.dependencies]
soroban-sdk = "26"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
